--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
 -->
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.android.launcher3">
     <uses-sdk android:targetSdkVersion="33" android:minSdkVersion="30"/>
     <!--
@@ -36,8 +37,9 @@
         android:label="@string/derived_app_name"
         android:theme="@style/AppTheme"
         android:largeHeap="@bool/config_largeHeap"
-        android:restoreAnyVersion="true"
-        android:supportsRtl="true" >
+        android:restoreAnyVersion="true" 
+        android:supportsRtl="true"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <!--
         Main launcher activity. When extending only change the name, and keep all the
